# portfolio

./: LICENSE  README.md  pyproject.toml
python-snippet-vault/: _config.yml  _toc.yml  create_folders.py  watch.py
python-snippet-vault/_build/.doctrees/: environment.pickle  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
python-snippet-vault/_build/.doctrees/content/: intro.doctree
python-snippet-vault/_build/html/: .buildinfo  genindex.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  search.html  searchindex.js
python-snippet-vault/_build/html/_sources/: notebooks.ipynb
python-snippet-vault/_build/html/content/: intro.html
python-snippet-vault/_build/jupyter_execute/: markdown-notebooks.ipynb  notebooks.ipynb
python-snippet-vault/content/data_science/: index.md  statistics_analysis.md
python-snippet-vault/content/database/: connection.md  crud.md  quick_pre-sets.md  transactions.md
python-snippet-vault/content/projects/: advanced_projects.md  data_science.md  database.md  simple_projects.md  system_automation.md  webscraping_reports.md
python-snippet-vault/content/regular_expressions/: re.findall.md  re.match.md  re.sub.md
python-snippet-vault/content/simple/argparse/: index.md  required_true.md  type.md
python-snippet-vault/content/simple/collections/: ChainMap.md  Counter.md  OrderedDict.md  defaultdict.md  index.md  namedtuple.md
python-snippet-vault/content/simple/csv/: csv.DictReader.md  csv.DictWriter.md  csv.QUOTE.md  csv.reader.md  csv.writer.md  (+1 more)
python-snippet-vault/content/web/: flask.md
(+166 files in other folders)
